--- a/css_two/p102-元素显示模式.html
+++ b/css_two/p102-元素显示模式.html
@@ -25,6 +25,13 @@
             2. 高、宽直接设置是无效的
             3. 默认宽度就是它本身内容的宽度
             4. 行内元素只能容纳文本或其他行内元素
+
+        
+        行内块元素：<img>、<input>、<td>，它们同时具有块元素和行内元素的特点
+            行内块元素特点：
+            1. 和相邻行内元素（行内块）在一行上，但是他们之间会有空白缝隙，一行可以显示多个。
+            2. 默认宽度就是它本身内容的宽度（行内元素特点）
+            3. 高度、行高、外边距一级内边距都可以控制（块级元素特点）
         */
 
         div {
