--- a/4-css-背景/p116-背景图片.html
+++ b/4-css-背景/p116-背景图片.html
@@ -7,11 +7,14 @@
     <title>Document</title>
     <style>
         div {
+            background-color: aquamarine;
+            width: 300px;
+            height: 300px;
 
             /* 1. 描述了元素的背景图像
             实际开发常见于 logo 或者一些装饰性的小图片或者超大的背景图片，优点是非常便于控制位置。
             */
-            background-image: url();
+            background-image: url(../images/logo.png);
 
             /* 2. 背景平铺，默认是平铺 */
             /* background-repeat: repeat; */
