练习到6盒子模型

--- a/3-css-选择器和显示样式/p100-链接伪类选择器.html
+++ b/3-css-选择器和显示样式/p100-链接伪类选择器.html
@@ -42,7 +42,7 @@
             color: green;
         }
 
-        /* 链接伪类选择器实际工资开发中的写法 */
+        /* 链接伪类选择器实际工作开发中的写法 */
         /* 
         a {
             color: gray;
