--- a/6-盒子模型/p139-盒子模型边框border.html
+++ b/6-盒子模型/p139-盒子模型边框border.html
@@ -10,7 +10,7 @@
             width: 300px;
             height: 300px;
 
-            /* border-width 比那块的粗细，一般情况下都用 px */
+            /* border-width 边框的粗细，一般情况下都用 px */
             border-width: 5px;
 
             /* 边框的样式，solid 实线边框，dashed 虚线边框，dotted 点线边框... */
