--- a/3-css-选择器和显示样式/p111-显示模式的转换.html
+++ b/3-css-选择器和显示样式/p111-显示模式的转换.html
@@ -37,8 +37,8 @@
     <a href="#">金星阿姨</a>
     <a href="#">金星阿姨</a>
 
-    <div>我是块级元素</div>
-    <div>我是块级元素</div>
+    <div>我是块级元素转行内元素</div>
+    <div>我是块级元素转行内元素</div>
 
     <span>行内元素转换为行内块元素</span>
     <span>行内元素转换为行内块元素</span>
